prometheus-opertor/manifests/alertmanager-dashboard-ingressroute.yaml
---
# 定义traefik dashboard访问验证
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: alertmanager-dashboard-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: authsecret
---
# http重定向https
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  name: redirect-https
#  namespace: prometheus-monitor
#spec:
#  redirectScheme:
#    scheme: https
#    permanent: true
---
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-web-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: "Host(`alertmanager.rr.tv`)"
    kind: Rule
    middlewares:
    - name: alertmanager-dashboard-auth
      namespace: monitoring
    services:
    - name: alertmanager-main
      port: 9093
---
