prometheus-opertor/manifests/dashboard-hook-ingressroute.yaml
---
# 定义traefik dashboard访问验证
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: authsecret
---
# http重定向https
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  name: redirect-https
#  namespace: monitoring
#spec:
#  redirectScheme:
#    scheme: https
#    permanent: true
---
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-web-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: "Host(`prometheus.rr.tv`)"
    kind: Rule
    middlewares:
    - name: dashboard-auth
      namespace: monitoring
    services:
    - name: prometheus-k8s
      port: 9090
---
