prometheus-opertor/manifests/grafana-dashboard-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-web-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: "Host(`grafana.rr.tv`)"
    kind: Rule
    services:
    - name: grafana
      port: 3000
---
